
 * Extended gpgme_op_decrypt* and gpgme_op_verify* to allow writing the
   output directly to a file.  [T6550]

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and gpgme_op_sign*
   to allow reading the input data directly from a file.  [T6550]

 * Add information about designated revocation keys.  [T7118]

 * New context flag "import-options".  [T7152]

 * cpp: Provide information about designated revocation keys for a Key.
   [T7118]

 * cpp: Add safer member function returning text describing an error.
   [T5960]

 * qt: Build QGpgME for Qt 5 and Qt 6 simultaneously.  [T7205]

 * qt: Install headers for Qt 5 and Qt 6 in separate folders.  [T7161]

 * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
   files.  [T6550]

 * qt: Allow writing the decrypted/encrypted/signed/verified data directly
   to files.  [T6550]

 * qt: Allow specifying import options when importing keys.  [T7152]

 * qt: Allow appending a detached signature to an existing file.  [T6867]

 * Interface changes relative to the 1.23.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_ENCRYPT_FILE                      NEW.
 GPGME_SIG_MODE_FILE                     NEW.
 gpgme_key_t                             EXTENDED: New field 'revkeys'.
 gpgme_revocation_key_t                  NEW.
 gpgme_set_ctx_flag                      EXTENDED: New flag 'import-options'.
 cpp: Context::EncryptFile               NEW.
 cpp: SignatureMode::SignFile            NEW.
 cpp: RevocationKey                      NEW.
 cpp: Key::revocationKey                 NEW.
 cpp: Key::numRevocationKeys             NEW.
 cpp: Key::revocationKeys                NEW.
 cpp: Error::asStdString                 NEW.
 cpp: Error::asString                    DEPRECATED.
 qt: DecryptVerifyJob::setInputFile      NEW.
 qt: DecryptVerifyJob::inputFile         NEW.
 qt: DecryptVerifyJob::setOutputFile     NEW.
 qt: DecryptVerifyJob::outputFile        NEW.