@@ -839,6 +839,7 @@ struct engine_ops _gpgme_engine_ops_assuan =
     NULL,               /* verify */
     NULL,               /* getauditlog */
     NULL,               /* setexpire */
+    NULL,               /* setownertrust */
     llass_transact,     /* opassuan_transact */
     NULL,		/* conf_load */
     NULL,		/* conf_save */
