@@ -1310,6 +1310,7 @@ struct engine_ops _gpgme_engine_ops_gpgconf =
     NULL,		/* verify */
     NULL,		/* getauditlog */
     NULL,               /* setexpire */
+    NULL,               /* setownertrust */
     NULL,               /* opassuan_transact */
     gpgconf_conf_load,
     gpgconf_conf_save,
