@@ -2444,6 +2444,7 @@ struct engine_ops _gpgme_engine_ops_gpgsm =
     gpgsm_verify,
     gpgsm_getauditlog,
     NULL,               /* setexpire */
+    NULL,               /* setownertrust */
     NULL,               /* opassuan_transact */
     NULL,		/* conf_load */
     NULL,		/* conf_save */
