@@ -470,6 +470,7 @@ struct engine_ops _gpgme_engine_ops_spawn =
     NULL,		/* verify */
     NULL,		/* getauditlog */
     NULL,               /* setexpire */
+    NULL,               /* setownertrust */
     NULL,               /* opassuan_transact */
     NULL,		/* conf_load */
     NULL,		/* conf_save */
