@@ -285,6 +285,9 @@ GPGME_1.0 {
     gpgme_op_verify_ext;
     gpgme_op_verify_ext_start;
 
+    gpgme_op_setownertrust;
+    gpgme_op_setownertrust_start;
+
   local:
     *;
 
